--- a/resources/sass/Layout/_container.scss
+++ b/resources/sass/Layout/_container.scss
@@ -1,3 +1,12 @@
 .l-container {
     width: 100%;
+    &__header {
+        margin: $space_xl 0;
+    }
+    &__inner {
+        padding: $space_xl;
+        @include mq(sm){
+            padding: $space_xxl $space_m;
+        }
+    }
 }
