--- a/resources/sass/Object/Component/_button.scss
+++ b/resources/sass/Object/Component/_button.scss
@@ -7,19 +7,16 @@
     color: $font-color_default;
     font-size: $font-size_default;
     background: $background-color_sub;
-
     &:hover {
         cursor: pointer;
         color: $font-color_sub;
     }
-
     &--submit {
         margin-top: $space_m;
         transition: 0.3s;
         width: 100%;
         height: 50px;
     }
-
     &--purchase {
         display: block;
         color: $font-color_sub;
@@ -29,7 +26,6 @@
             background: $background-color_sub3;
         }
     }
-
     &--main {
         border: 2px solid $boader-color_main;
         &:hover {
@@ -37,14 +33,12 @@
             background: $background-color_btn_main;
         }
     }
-
     &--primary {
         border: 2px solid $boader-color_primary;
         &:hover {
             background: $background-color_btn_primary;
         }
     }
-
     &--default {
         margin: $space_s;
         padding: $space_s;
@@ -54,41 +48,39 @@
             background: $background-color_btn_default;
         }
     }
-
     &__container {
         display: flex;
         flex-direction: column;
+        margin: $space_m;
     }
-
     &--zip {
         display: flex;
         justify-content: flex-end;
     }
-
     &--top {
         margin: auto;
-        padding: $space_s;
         display: flex;
         width: 30%;
         justify-content: center;
         height: 50px;
         align-items: center;
         border-radius: 100vh;
-        font-size: 24px;
+        font-size: $font-size_l;
+        @include mq(md) {
+            width: 60%;
+        }
+        @include mq(sm) {
+            width: 90%;
+        }
     }
-
-    &__register {
+    &--register {
         display: block;
         text-align: center;
         font-weight: bold;;
         color: $font-color_default;
-        border: 2px solid $boader-color_main;
-        &:hover {
-            background: $background-color_btn_main;
-        }
+        padding: $space_s;
+        font-size: $font-size_l;
     }
-
-
     &__contact {
         width: 100%;
         display: block;
@@ -100,7 +92,6 @@
             background: $background-color_btn_main;
         }
     }
-
     &__share {
         background: #000;
         border: #000;
