--- a/resources/sass/Object/Utility/_ftColor.scss
+++ b/resources/sass/Object/Utility/_ftColor.scss
@@ -1,13 +1,9 @@
-.u-color {
+.u-ftColor {
     &__user {
         color: #ff1493;
     }
 
     &__convenience {
         color: #00bfff;
-    }
-
-    &__bg {
-        background: $background-color_main;
     }
 }
