--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -34,12 +34,14 @@ $background-color_btn_main: #ff2828;
 $background-color_btn_primary: #32cd32;
 $background-color_btn_default: #ffa500;
 $background-color_valid: #ffcccc;
-$background-color_label: #ff6666;
+$background-color_label: #ff2828;
+$background-color_badge: #ff6666;
 
 $boader-color_line: #434343;
 $boader-color_main: #ff2828;
 $boader-color_primary: #32cd32;
 $boader-color_default: #ffa500;
+$boader-color_sub: #f6f5f4;
 
 $twitter-share_color: #000;
 
