--- a/resources/sass/Layout/_header.scss
+++ b/resources/sass/Layout/_header.scss
@@ -12,7 +12,7 @@
     opacity: 0.9;
     padding: 0 $space_xl;
     @include mq(sm) {
-        height: 60px;
+        height: 100%;
         padding: 0 $space_l;
     }
     &__inner {
