--- a/resources/sass/Object/Component/_attachment.scss
+++ b/resources/sass/Object/Component/_attachment.scss
@@ -1,9 +1,12 @@
 .c-attachment {
     width: 50%;
-    margin-right: $space_m;
-
+    margin: $space_m;
+    box-shadow: 0 20px 20px -20px rgba(0,0,0,0.7);
+    -webkit-box-shadow: 0 20px 20px -20px rgba(0,0,0,0.7);
+    @include mq(md) {
+        width: 100%;
+    }
     @include mq(sm) {
         width: 100%;
-        margin-bottom: $space_m;
     }
 }
