--- a/resources/sass/Object/Component/_content.scss
+++ b/resources/sass/Object/Component/_content.scss
@@ -1,22 +1,20 @@
-.c-container {
+.c-content {
     width: $site-width;
     margin: auto;
-
+    display: flex;
+    align-items: center;
+    &__text {
+        line-height: 1.7;
+        font-size: $font-size_default;
+    }
+    @include mq(md) {
+        width: 100%;
+        flex-direction: column;
+    }
     @include mq(sm) {
         width: 100%;
+        flex-direction: column;
     }
-
-    &__body {
-        line-height: 1.7;
-        display: flex;
-        align-items: center;
-        font-size: $font-size_default;
-
-        @include mq(sm) {
-            flex-direction: column;
-        }
-    }
-
     &__contact {
         line-height: 1.7;
         font-size: $font-size_default;
