--- a/resources/sass/Object/Component/_toast.scss
+++ b/resources/sass/Object/Component/_toast.scss
@@ -4,18 +4,16 @@
     left: 0;
     right: 0;
     width: 100%;
-    padding: $space_s 0;
+    padding: $space_m 0;
     color: $background-color_sub;
     font-weight: bold;
     opacity: 0.9;
     z-index: 3;
-    text-align: center; // テキストを中央揃え
-
-    &__success {
-        background-color: #28a745;
+    text-align: center;
+    &--success {
+        background-color: $background-color_btn_primary;
     }
-
-    &__error {
-        background-color: #dc3545;
+    &--error {
+        background-color: $background-color_btn_main;
     }
 }
